test hopefuly fixed hamburger menu not showing?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -266,7 +266,7 @@ nav ul li a {
 }
 @media only screen and (max-width: 700px) {
   header {
-    margin: auto;
+    margin: 0;
     font-weight: 700;
     font-family: "Poppins", sans-serif;
     z-index: -100;
@@ -316,7 +316,7 @@ nav ul li a {
   .topnav {
     width: 100%;
     margin: 0;
-    display: inline-block;
+    display: block;
     position: relative;
     z-index: 100;
   }
@@ -344,7 +344,7 @@ nav ul li a {
 
   /* Style the hamburger menu */
   .topnav a.icon {
-    display: inline-block;
+    display: block;
     position: absolute;
     margin-right: -2em;
     margin-top: 0.7em;
@@ -366,7 +366,7 @@ nav ul li a {
 
 @media only screen and (max-width: 480px) {
   header {
-    margin: auto;
+    margin: 0;
     font-weight: 700;
     font-family: "Poppins", sans-serif;
     z-index: -100;
